Установлен favicon.ico

--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -36,7 +36,7 @@
     <meta property="twitter:image" content="{{ config.site }}/images/avatar-origin.png">
 
 
-    <link rel="shortcut icon" href="/images/avatar-face-32.jpg" type="image/jpeg">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="/images/avatar-180.jpg" type="image/jpeg">
     <link rel="stylesheet" href="/styles/styles.css">
     <script type="application/ld+json">{% schema config %}</script>
