--- a/src/styles/add-to-contact-section.css
+++ b/src/styles/add-to-contact-section.css
@@ -10,7 +10,7 @@
     }
 }
 
-.add-contact-container .vcard {
+.add-contact-container a {
     display: flex;
     width: 4rem;
     height: 4rem;
@@ -21,18 +21,12 @@
     border: 1px solid #ddd;
 }
 
-.add-contact-container .vcard:focus,
-.add-contact-container .vcard:hover {
+.add-contact-container a:focus,
+.add-contact-container a:hover {
     background-color: #ddd;
 }
 
 .add-contact-container svg {
     width: 100%;
     height: 100%;
-}
-
-.add-contact-container img {
-    width: 7rem;
-    height: 7rem;
-    margin: -1.9rem;
 }
