--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -61,19 +61,19 @@ main.flip .back {
     }
 }
 
-.front,
-.back {
+.card {
     width: 100%;
     height: 100%;
-    transition: transform 0.3s ease-in;
+    transition: all 0.3s ease-in;
     transform-style: preserve-3d;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-}
-
-.card {
     padding: 2rem;
     background-color: var(--white);
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 3px 3px -2px rgba(0,0,0,.2),0 3px 4px 0 rgba(0,0,0,.14),0 1px 8px 0 rgba(0,0,0,.12);
     border-radius: 4px;
 }
+
+/*main:hover .card {*/
+/*    box-shadow: 0 8px 9px -5px rgba(0,0,0,.2),0 15px 22px 2px rgba(0,0,0,.14),0 6px 28px 5px rgba(0,0,0,.12) !important;*/
+/*}*/
