--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,20 +1,23 @@
 html,
 body {
-    --white: rgb(250,250,250);
     --black: rgb(5,5,5);
+    --white: rgba(255,255,255, 0.8);
+    --gray: #ddd;
     color: var(--black);
     height: 100%;
     width: 100%;
-    box-sizing: border-box;
     font-size: 15px;
-    background: #eee;
+    background: #fafafa;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
-    body {
-        filter: invert();
+    html, body {
+        --black: rgba(255,255,255, 0.8);
+        --white: #1e1e1e;
+        --gray: rgb(74 74 74);
+        background-color: rgb(20,20,20);
     }
 }
