Масштабирование для больших дисплеев

--- a/src/styles/lists.css
+++ b/src/styles/lists.css
@@ -6,9 +6,8 @@ ul {
 
 ul a {
     padding: 0.6rem 0;
-    border-bottom: 1px solid var(--gray);
+    border-bottom: 0.1rem solid var(--gray);
     color: var(--black);
-    margin-top: -1px;
     text-decoration: none;
     display: flex;
     align-items: center;
