--- a/src/styles/add-to-contact-section.css
+++ b/src/styles/add-to-contact-section.css
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    border: 1px solid var(--gray);
+    border: 0.1rem solid var(--gray);
 }
 
 .add-contact-container a:focus,
