--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -64,7 +64,8 @@ main.flip .back {
 .card {
     width: 100%;
     height: 100%;
-    transition: all 0.3s ease-in;
+    transition: transform 0.3s ease-in;
+    will-change: transform;
     transform-style: preserve-3d;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
