--- a/src/layouts/card.njk
+++ b/src/layouts/card.njk
@@ -10,21 +10,20 @@ layout: base.njk
         </section>
 
         <div class="back card">
-            <section class="add-contact-container">
-                <a href="/{{ lang }}/vcard.vcf" title="{% _t 'add-contact', lang %}" class="vcard">
-                    <svg viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V8c0-.55-.45-1-1-1s-1 .45-1 1v2H2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1H6zm9 4c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4z"/>
-                    </svg>
-                </a>
 
-                <a href="/{{ lang }}/qr-code.png" target="_blank" title="{% _t 'qr-code', lang, 'alt' %}">
-                    <svg viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M4,4H10V10H4V4M20,4V10H14V4H20M14,15H16V13H14V11H16V13H18V11H20V13H18V15H20V18H18V20H16V18H13V20H11V16H14V15M16,15V18H18V15H16M4,20V14H10V20H4M6,6V8H8V6H6M16,6V8H18V6H16M6,16V18H8V16H6M4,11H6V13H4V11M9,11H13V15H11V13H9V11M11,6H13V10H11V6M2,2V6H0V2A2,2 0 0,1 2,0H6V2H2M22,0A2,2 0 0,1 24,2V6H22V2H18V0H22M2,18V22H6V24H2A2,2 0 0,1 0,22V18H2M22,22V18H24V22A2,2 0 0,1 22,24H18V22H22Z"/>
-                    </svg>
-                </a>
-            </section>
+            <a href="/{{ lang }}/vcard.vcf" title="{% _t 'add-contact', lang %}" class="vcard">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V8c0-.55-.45-1-1-1s-1 .45-1 1v2H2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1H6zm9 4c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4z"/>
+                </svg>
+            </a>
 
-            <section>
+            <a href="/{{ lang }}/qr-code.png" target="_blank" title="{% _t 'qr-code', lang, 'alt' %}" class="qrcode">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M4,4H10V10H4V4M20,4V10H14V4H20M14,15H16V13H14V11H16V13H18V11H20V13H18V15H20V18H18V20H16V18H13V20H11V16H14V15M16,15V18H18V15H16M4,20V14H10V20H4M6,6V8H8V6H6M16,6V8H18V6H16M6,16V18H8V16H6M4,11H6V13H4V11M9,11H13V15H11V13H9V11M11,6H13V10H11V6M2,2V6H0V2A2,2 0 0,1 2,0H6V2H2M22,0A2,2 0 0,1 24,2V6H22V2H18V0H22M2,18V22H6V24H2A2,2 0 0,1 0,22V18H2M22,22V18H24V22A2,2 0 0,1 22,24H18V22H22Z"/>
+                </svg>
+            </a>
+
+            <section class="works">
                 <h2 id="list-works-header">{% _t 'my-works', lang %}</h2>
                 <ul id="list-works" aria-labelledby="list-works-header">
                     {% for item in config.links %}
@@ -40,7 +39,7 @@ layout: base.njk
                 </ul>
             </section>
 
-            <section>
+            <section class="contacts">
                 <h2 id="list-contacts-header">{% _t 'my-contacts', lang %}</h2>
                 <ul id="list-contacts" aria-labelledby="list-contacts-header">
                     {% for item in config.links %}
