--- a/src/styles/lists.css
+++ b/src/styles/lists.css
@@ -24,5 +24,10 @@ ul svg {
 }
 
 
-.works { grid-area: works; }
-.contacts { grid-area: contacts; }
+.works {
+    grid-area: works;
+}
+
+.contacts {
+    grid-area: contacts;
+}
