--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,20 +1,30 @@
-html,
+html, body {
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     --black: rgb(5, 5, 5);
     --white: rgba(255, 255, 255, 0.8);
     --gray: #ddd;
     color: var(--black);
-    height: 100%;
-    width: 100%;
-    font-size: 16px;
     background: #fafafa;
-    margin: 0;
-    padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (orientation: portrait) and (max-device-width: 480px) {
+    body {
+        justify-content: end;
+        align-items: end;
+    }
 }
 
 @media (prefers-color-scheme: dark) {
-    html, body {
+    body {
         --black: rgba(255, 255, 255, 0.8);
         --white: #1e1e1e;
         --gray: rgb(74 74 74);
@@ -23,13 +33,13 @@ body {
 }
 
 @media (min-width: 1920px), (min-height: 1920px) {
-    html, body {
+    html {
         font-size: calc(16px * 1.5);
     }
 }
 
 @media (min-width: 2560px), (min-height: 2560px) {
-    html, body {
+    html {
         font-size: calc(16px * 3);
     }
 }
