--- a/src/styles/lists.css
+++ b/src/styles/lists.css
@@ -4,6 +4,16 @@ ul {
     list-style: none;
 }
 
+li {
+    padding: 0 0.6rem;
+    margin: 0 -0.6rem -0.1rem;
+}
+
+li:focus-within,
+li:hover {
+    background-color: var(--gray);
+}
+
 ul a {
     padding: 0.6rem 0;
     border-bottom: 0.1rem solid var(--gray);
@@ -14,10 +24,6 @@ ul a {
     font-size: 120%;
 }
 
-ul a:focus,
-ul a:hover {
-    background-color: var(--gray);
-}
 
 ul svg {
     margin-right: 1rem;
