--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,68 +1,71 @@
-main {
-    position: relative;
-    perspective: 1000px;
-    width: 100%;
-    max-width: 25rem;
-}
-
-@media (orientation: landscape) {
+@supports (display: grid) {
     main {
-        max-width: 40rem;
+        position: relative;
+        perspective: 1000px;
+        width: 100%;
+        max-width: 25rem;
     }
-}
 
-main:focus-within .front,
-main:hover .front,
-main.flip .front {
-    transform: rotateY(180deg);
-}
+    @media (orientation: landscape) {
+        main {
+            max-width: 40rem;
+        }
+    }
 
-main:focus-within .back,
-main:hover .back,
-main.flip .back {
-    transform: rotateY(0deg);
-}
+    main:focus-within .front,
+    main:hover .front,
+    main.flip .front {
+        transform: rotateY(180deg);
+    }
 
-.front {
-    position: absolute;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
+    main:focus-within .back,
+    main:hover .back,
+    main.flip .back {
+        transform: rotateY(0deg);
+    }
 
-.back {
-    transform: rotateY(-180deg);
-    display: grid;
-    gap: 1rem;
-    grid-template:
+    .front {
+        position: absolute;
+        z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .back {
+        transform: rotateY(-180deg);
+        display: grid;
+        gap: 1rem;
+        grid-template:
         "vcard    qrcode"   4rem
         "works    works"    auto
         "contacts contacts" auto /
          auto     4rem;
-}
+    }
 
-@media (orientation: landscape) {
-    .back {
-        column-gap: 2rem;
-        grid-template:
+    @media (orientation: landscape) {
+        .back {
+            column-gap: 2rem;
+            grid-template:
             "vcard  works contacts" 4rem
             "qrcode works contacts" auto /
              4rem   auto  auto;
+        }
     }
-}
 
-.card {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.3s ease-in;
-    will-change: transform;
-    transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden; /* Safari <= 14 */
-    backface-visibility: hidden;
-    padding: 2rem;
-    background-color: var(--white);
-    box-shadow: 0 0.2rem 0.2rem -0.13rem rgba(0, 0, 0, .2), 0 0.2rem 0.26rem 0 rgba(0, 0, 0, .14), 0 0.06rem 0.53rem 0 rgba(0, 0, 0, .12);
-    border-radius: 0.3rem;
+    .card {
+        width: 100%;
+        height: 100%;
+        transition: transform 0.3s ease-in;
+        will-change: transform;
+        transform-style: preserve-3d;
+        -webkit-backface-visibility: hidden; /* Safari <= 14 */
+        backface-visibility: hidden;
+        padding: 2rem;
+        background-color: var(--white);
+        box-shadow: 0 0.2rem 0.2rem -0.13rem rgba(0, 0, 0, .2), 0 0.2rem 0.26rem 0 rgba(0, 0, 0, .14), 0 0.06rem 0.53rem 0 rgba(0, 0, 0, .12);
+        border-radius: 0.3rem;
+    }
+
 }
