--- a/src/styles/headers.css
+++ b/src/styles/headers.css
@@ -1,22 +1,24 @@
-h1 {
-    font-weight: 100;
-}
-
-@media (orientation: portrait) {
+@supports (display: flex) {
     h1 {
-        display: flex;
-        flex-direction: column;
+        font-weight: 100;
     }
-}
 
-@media (prefers-color-scheme: dark) {
-    h1 {
-        font-weight: 400;
+    @media (orientation: portrait) {
+        h1 {
+            display: flex;
+            flex-direction: column;
+        }
     }
-}
 
-h2 {
-    font-weight: 500;
-    margin-bottom: 0.5rem;
-    margin-top: 0;
+    @media (prefers-color-scheme: dark) {
+        h1 {
+            font-weight: 400;
+        }
+    }
+
+    h2 {
+        font-weight: 500;
+        margin-bottom: 0.5rem;
+        margin-top: 0;
+    }
 }
