--- a/src/styles/lists.css
+++ b/src/styles/lists.css
@@ -1,39 +1,42 @@
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+@supports (display: flex) {
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
 
-li {
-    padding: 0 0.6rem;
-    margin: 0 -0.6rem -0.1rem;
-}
+    li {
+        padding: 0 0.6rem;
+        margin: 0 -0.6rem -0.1rem;
+    }
 
-li:focus-within,
-li:hover {
-    background-color: var(--gray);
-}
+    li:focus-within,
+    li:hover {
+        background-color: var(--gray);
+    }
 
-ul a {
-    padding: 0.6rem 0;
-    border-bottom: 0.1rem solid var(--gray);
-    color: var(--black);
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    font-size: 120%;
-}
-
-
-ul svg {
-    margin-right: 1rem;
-}
+    ul a {
+        padding: 0.6rem 0;
+        border-bottom: 0.1rem solid var(--gray);
+        color: var(--black);
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        font-size: 120%;
+    }
 
 
-.works {
-    grid-area: works;
-}
+    ul svg {
+        margin-right: 1rem;
+    }
 
-.contacts {
-    grid-area: contacts;
+
+    .works {
+        grid-area: works;
+    }
+
+    .contacts {
+        grid-area: contacts;
+    }
+
 }
