--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,19 +1,21 @@
-html, body {
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-}
+@supports (display: flex) {
+    html, body {
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
 
-body {
-    --black: rgb(5, 5, 5);
-    --white: rgba(255, 255, 255, 0.8);
-    --gray: #ddd;
-    color: var(--black);
-    background: #fafafa;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    body {
+        --black: rgb(5, 5, 5);
+        --white: rgba(255, 255, 255, 0.8);
+        --gray: #ddd;
+        color: var(--black);
+        background: #fafafa;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 @media (prefers-color-scheme: dark) {
