--- a/src/styles/svg-icons.css
+++ b/src/styles/svg-icons.css
@@ -1,7 +1,18 @@
 svg {
-    --oversize: 0.4em;
-    fill: var(--black);
-    height: calc(1em + var(--oversize));
-    width: auto;
-    margin: calc(var(--oversize) * -1) 0;
+    fill: black;
+    height: 1.2em;
+    width: 1.2em;
+    margin: 0;
+    vertical-align: middle;
 }
+
+@supports (--oversize: 0.4em) {
+    svg {
+        --oversize: 0.4em;
+        fill: var(--black);
+        height: calc(1em + var(--oversize));
+        width: auto;
+        margin: calc(var(--oversize) * -1) 0;
+    }
+}
+
