--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+    .word-wrap {
+        word-wrap: anywhere;
+    }
+}
