--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,44 @@
 @tailwind utilities;
 
 
+@layer base {
+    html, :host {
+        line-height: 1.5;
+        -webkit-text-size-adjust: 100%;
+        -moz-tab-size: 4;
+        tab-size: 4;
+        font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        font-feature-settings: normal;
+        font-variation-settings: normal;
+    }
+
+    img,
+    svg {
+        display: block;
+        vertical-align: middle;
+        max-width: 100%;
+        height: auto;
+    }
+
+    h1, p {
+        margin: 0;
+    }
+
+    .border {
+        border-style: solid;
+    }
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
+    ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+}
 @layer utilities {
     .word-wrap {
         word-wrap: anywhere;
