--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@
         font-variation-settings: normal;
     }
 
+    html, body {
+        margin: 0;
+    }
+
     img,
     svg {
         display: block;
@@ -26,8 +30,9 @@
         margin: 0;
     }
 
-    .border {
+    .border, .border-t {
         border-style: solid;
+        border-width: 0;
     }
 
     a {
